--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,10 @@ html, body {
     overflow: hidden;
     border-bottom: 2px solid #D3D3D3;
     box-sizing:border-box;
+
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */
 }
 
 #logo {
