--- a/css/main.css
+++ b/css/main.css
@@ -83,6 +83,17 @@ html, body {
     width: 260px;
 }
 
+#middle #left a {
+    text-decoration:none;
+    width: 100px;
+    background-color: black;
+    color: white;
+    display: inline-block;
+    text-align: center;
+    margin-top: 12px;
+    padding: 6px;
+}
+
 #middle #right {
     float: right;
     margin-right: 160px;
