--- a/css/main.css
+++ b/css/main.css
@@ -136,3 +136,24 @@ html, body {
     margin-bottom: 100px;
     text-align: center;
 }
+
+#buy {
+    margin-top: 200px;
+    text-align: center;
+    margin-bottom: 100px;
+}
+
+#buy p {
+    font-size: 18px;
+}
+
+#buy a {
+    text-decoration:none;
+    width: 150px;
+    background-color: black;
+    color: white;
+    display: inline-block;
+    text-align: center;
+    margin-top: 12px;
+    padding: 6px;
+}
