--- a/css/main.css
+++ b/css/main.css
@@ -162,3 +162,27 @@ html, body {
     margin-top: 12px;
     padding: 6px;
 }
+
+#contact {
+    text-align: center;
+    margin: 0;
+    padding: 0;
+    margin-top: 50px;
+    background-color: black;
+    box-sizing: border-box;
+    padding-bottom: 26px;
+}
+
+#contact h3 {
+    padding-top: 20px;
+    color: white;
+}
+
+#contact p {
+    margin: 0;
+    color: white;
+}
+
+#contact a {
+    color: green;
+}
