--- a/css/main.css
+++ b/css/main.css
@@ -145,6 +145,27 @@ html, body {
     padding-top: 60px;
 }
 
+#download {
+    margin-top: 200px;
+    text-align: center;
+    margin-bottom: 100px;
+}
+
+#download p {
+    font-size: 18px;
+}
+
+#download a {
+    text-decoration:none;
+    width: 150px;
+    background-color: black;
+    color: white;
+    display: inline-block;
+    text-align: center;
+    margin-top: 12px;
+    padding: 6px;
+}
+
 #buy {
     margin-top: 200px;
     text-align: center;
